optimezation of the code lol ...

--- a/www/error_pages/413.html
+++ b/www/error_pages/413.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Error 400</title>
+    <title>Error 413</title>
     <style>
         body {
             background-color: #0d1117;
@@ -35,8 +35,8 @@
             font-size: 140px;
             margin: 0;
             background: linear-gradient(90deg, #00ffff, #00bfff);
-            -webkit-background-clip: text;
             background-clip: text;
+            -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             animation: glow 1.5s ease-in-out infinite alternate;
         }
@@ -94,8 +94,8 @@
 <body>
 
 <div class="container">
-    <h1>400</h1>
-    <p>Bad Request – Your request couldn't be processed.</p>
+    <h1>413</h1>
+    <p>Request Entity Too Large – The request is too large to process.</p>
     <button class="btn" onclick="window.location.href = '/'">Go Home</button>
 </div>
 
